--- a/style.css
+++ b/style.css
@@ -104,3 +104,10 @@ color: #E0B612;
     color: #FF3C5F;
     margin-top: 10px;
 }
+
+
+/* added for js */
+
+.notify-section{
+    display: none;
+}
